# Matter

./: README.md  config.h.in  meson.build
inc/: global.hpp  help.hpp  main.hpp
inc/core/: compositor.hpp
inc/seat/: keyboard.hpp
include/: global.h  main.h
include/core/: compositor.h
source/: global.cpp  main.cpp  meson.build
src/: global.cpp  help.cpp  main.cpp
src/core/: compositor.cpp
src/seat/: keyboard.cpp
